# 4DOllama

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  INSTALL.md  Makefile  Modelfile  NOTICE  README.md  docker-compose.yml  forge_seed.py  go.mod  go.sum  install.cmd  registry.json
.github/workflows/: ci.yml
4DOllama/: .gitignore  README.md  Save-4DOllamaWorkspace.ps1  pyproject.toml  requirements.txt
4DOllama/docs/: NATIVE_4D_ENGINE.md
4DOllama/examples/: README.md  experiment_4d_diffusion.rq4d
4DOllama/fourdollama/: __init__.py  __main__.py  cli.py  config.py  engine.py  kernel.py  r4d_subprocess.py  registry.py  schemas.py  server.py
4DOllama/scripts/: Install-IntoCurrentVenv.ps1
4d-engine/: Cargo.toml
4d-engine/include/: four_d_engine.h
4d-engine/src/: attention4d.rs  demo.rs  ffi.rs  gemm4d.rs  lib.rs  logits_project.rs  quaternion.rs  rope4d.rs  sampling4d.rs  tensor4d.rs
4d-engine/src/converter/: gguf.rs  lift.rs  mod.rs
4d-engine/src/gpu/: cuda4d.rs  metal4d.rs  mod.rs
4d-engine/src/ops/: mod.rs  rmsnorm4d.rs
RQ4D/: LICENSE  README.md  spacetime_wave_data.csv  wave_plotter.py
RQ4D/docs/: RQ4D_MASTER_GUIDE.md
RQ4D/examples/: extreme_density_manifold.rq4d  extreme_density_manifold_4k.rq4d  final_singularity.rq4d  hardware_sensing.rq4d  high_density_manifold.rq4d  internet_breaker_64k.rq4d  quantum_sensor_array.rq4d  singularity_v2.rq4d  (+4 more)
RomanAI/: .cursorrules  .gitignore  Makefile  R4D-VISION.md  README.md  roma4d.toml  romanai.cmd
docs/: 4DOLLAMA_REFERENCE_FOR_LLMS.md  4DOllama.md  ARCHITECTURE.md  INSTALL_4DOLLAMA.md  PRIOR_ART.md  ROMANAI_V2_SHARDS.md
scripts/: Backup-And-Reinstall-4dollama.ps1  Install-Repo.ps1  Install-Roma4d.ps1  Launch-4DOllama.ps1  build-all.ps1  fourdollama-go.cmd  fourdollama-go.ps1  install-all.sh  install-linux.sh  install-roma4d.sh  install.ps1  install.sh  rebuild-install.ps1  uninstall.ps1  uninstall.sh
(+149 files in other folders)
