[project]
name = "fourdollama"
version = "0.1.0"
description = "Ollama-compatible API over Roma4D (r4d) — RomanAILabs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "typer>=0.9.0",
  "pydantic>=2.5.0",
]

[project.scripts]
4dollama = "fourdollama.cli:main"
4dollam = "fourdollama.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fourdollama*"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["fourdollama"]
